--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 
 #links {
     display: flex;
-    flex-direction: row-reverse;
     margin-left: auto;
     list-style-type: none;
 }
@@ -48,9 +47,74 @@ body {
     content: "";
     display: block;
     background-color: white;
-    transition: width 0.3s linear;
-  }
-  
-  #links li:hover:after {
-    width: 100%;
-  }
+    transition: 0.3s linear;
+}
+
+#links li:hover:after {
+  width: 100%;
+}
+
+#information {
+    display: flex;
+    color: white;
+    align-items: center;
+    margin: 90px 300px 0px;
+}
+
+#description {
+    width: 450px;
+    text-align: center;
+    overflow-wrap: normal;
+    margin: auto;
+}
+
+#logo {
+    margin-right: auto;
+}
+
+#logo img {
+    width: 350px;
+    height: auto;
+}
+
+#projects {
+    display: flex;
+    margin: 60px 200px 0px;
+    align-items: center;
+}
+
+#projects a {
+    text-decoration: none;
+    cursor: pointer;
+    overflow-wrap: normal;
+}
+
+.column {
+    flex-basis: 50%;
+}
+
+.project {
+    background-color: #151920;
+    border: 2px solid #686f79;
+    color: white;
+    border-radius: 10px;
+    width: 80%;
+    height: 110px;
+    margin: 10px auto;
+}
+
+.project h1 {
+    font-size: 25px;
+    margin-left: 20px;
+    margin-bottom: 5px;
+}
+
+.project p {
+    padding: 0 0 10px 15px;
+    margin-top: 0px;
+}
+
+.project:hover {
+    background-color: #686f79;
+    transition: 0.8s ease;
+}
