--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@ body {
     margin: 0px;
 }
 
+#firstSeparator {
+    display: block;
+    text-align: center;
+    margin-top: 90px;
+    color: white;
+}
+
+.separator {
+    display: block;
+    text-align: center;
+    margin-top: 200px;
+    color: white;
+}
+
 #header {
     display: flex;
     align-items: center;
@@ -54,32 +68,9 @@ body {
   width: 100%;
 }
 
-#information {
-    display: flex;
-    color: white;
-    align-items: center;
-    margin: 90px 300px 0px;
-}
-
-#description {
-    width: 450px;
-    text-align: center;
-    overflow-wrap: normal;
-    margin: auto;
-}
-
-#logo {
-    margin-right: auto;
-}
-
-#logo img {
-    width: 350px;
-    height: auto;
-}
-
 #projects {
     display: flex;
-    margin: 60px 200px 0px;
+    margin: 30px 200px 0px;
     align-items: center;
 }
 
@@ -91,6 +82,11 @@ body {
 
 .column {
     flex-basis: 50%;
+}
+
+.columnName {
+    text-align: center;
+    color: white;
 }
 
 .project {
@@ -117,4 +113,36 @@ body {
 .project:hover {
     background-color: #686f79;
     transition: 0.8s ease;
+}
+
+#information {
+    display: flex;
+    color: white;
+    align-items: center;
+    margin: 0px 300px 0px;
+}
+
+#description {
+    width: 450px;
+    text-align: center;
+    overflow-wrap: normal;
+    margin: auto;
+}
+
+#logo {
+    margin-right: auto;
+}
+
+#logo img {
+    width: 350px;
+    height: auto;
+}
+
+#partners {
+    text-align: center;
+}
+
+#partners img {
+    border: 10px solid #151920;
+    border-radius: 12px;
 }
