--- a/style.css
+++ b/style.css
@@ -130,6 +130,16 @@ body {
     margin: auto;
 }
 
+.description a {
+    text-decoration: none;
+    color: rgb(0, 102, 255);
+    transition: 0.8s ease;
+}
+
+.description a:hover {
+    color: blue;
+}
+
 .logo {
     margin-right: auto;
 }
