--- a/style.css
+++ b/style.css
@@ -162,3 +162,14 @@ body {
 #partners img:hover {
     border-color: white;
 }
+
+::-webkit-scrollbar {
+  background-color: #333;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #444;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #666;
+}
